[package]
name = "lentasmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
rexpect = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
env_logger = "0.8"
log = "0.4"
